--- a/index.html
+++ b/index.html
@@ -306,7 +306,12 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
 <pre><code>
-
+@article{zhao2026generalizable,
+  title={Generalizable and Animatable 3D Full-Head Gaussian Avatar from a Single Image},
+  author={Zhao, Shuling and Xu, Dan},
+  journal={arXiv preprint arXiv:xxxx.xxxxx},
+  year={2026}
+}
 </code></pre>
 
   </div>
