--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="publication-links">
 
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2601.12770"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -309,7 +309,7 @@
 @article{zhao2026generalizable,
   title={Generalizable and Animatable 3D Full-Head Gaussian Avatar from a Single Image},
   author={Zhao, Shuling and Xu, Dan},
-  journal={arXiv preprint arXiv:xxxx.xxxxx},
+  journal={arXiv preprint arXiv:2601.12770},
   year={2026}
 }
 </code></pre>
@@ -322,7 +322,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="">
+         href="https://arxiv.org/pdf/2601.12770">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/ShaelynZ/fhavatar" class="external-link" disabled>
